mkdocs-k8s-project/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mkdocs-deployment
  labels:
    app: mkdocs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mkdocs
  template:
    metadata:
      labels:
        app: mkdocs
    spec:
      containers:
      - name: mkdocs
        image: mkdocs/mkdocs:latest
        ports:
        - containerPort: 12000
        volumeMounts:
        - name: mkdocs-volume
          mountPath: /docs
      volumes:
      - name: mkdocs-volume
        hostPath:
          path: /path/to/your/docs
          type: Directory
