mkdocs-k8s-project/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mkdocs-service
  labels:
    app: mkdocs
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 12000
      protocol: TCP
  selector:
    app: mkdocs
